Fix visual bug: top of third study description line visible in table

--- a/src/Discovery/Discovery.css
+++ b/src/Discovery/Discovery.css
@@ -204,12 +204,12 @@
 .discovery-table-container .ant-table-tbody > tr.ant-table-row::after {
   display: block;
   position: absolute;
-  bottom: -40px;
+  bottom: -35px;
   left: 0;
   z-index: 0;
   content: "";
   width: 100%;
-  height: 40px;
+  height: 35px;
   background-color: #dfe3e2;
   transition: background-color 0.3s, border-color 0.3s;
 }
@@ -249,7 +249,7 @@
   background: inherit;
   margin-top: -25px;
   cursor: pointer;
-  height: 40px;
+  height: 35px;
   width: 100%;
   overflow: hidden;
   /* ---------
